objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Add_On_Finalise_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(sys) Add On Finalise Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount_invoiced_so_far_AUD__c</fullName>
        <formula>Amount_invoiced_so_far__c/Opportunity.Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount invoiced so far AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_invoiced_so_far__c</fullName>
        <label>Amount invoiced so far</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_invoiced_so_far_percent__c</fullName>
        <formula>( Amount_invoiced_so_far__c /  TotalPrice )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount invoiced so far percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Create_actions_completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for process ordering.</description>
        <label>(sys) Create actions completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deducted_fee_role__c</fullName>
        <label>Deducted fee role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Facilitator</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Facilitator__c</fullName>
        <inlineHelpText>Select the facilitator who will be delivering this service. If consulting style work that may have time added to it later on an ad hoc basis, please select &apos;Ad hoc&apos;.</inlineHelpText>
        <label>(sys) Facilitator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>Ad hoc</fullName>
                </value>
                <value>
                    <fullName>Not related to a facilitator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_role_records__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(sys) Has role records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_ad_hoc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(sys) Is ad hoc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>List_Price_AUD__c</fullName>
        <formula>ListPrice/Opportunity.Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Price AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Not_equal_to_PAX__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If set, this Opportunity Product will not update as the number of PAX changes.</inlineHelpText>
        <label>Not equal to PAX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OPE_code__c</fullName>
        <label>(sys) Opportunity Product Extension code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPE_code_current__c</fullName>
        <label>(sys) OPE code, current</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityProduct_ID_for_scheduler__c</fullName>
        <description>Used for mass scheduler only.</description>
        <label>(sys) OpportunityProduct ID for schedule</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Role</label>
        <referenceTo>Opportunity_Role__c</referenceTo>
        <relationshipLabel>Opportunity Products</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_form_instructions__c</fullName>
        <formula>PricebookEntry.Product2.Instructions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order form instructions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-House</fullName>
                </value>
                <value>
                    <fullName>Open Course</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Name_shortened__c</fullName>
        <formula>IF(LEN(Product_name__c) &gt; 43,LEFT(Product_name__c, 43) &amp; &quot;...&quot;,Product_name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(sys) Product Name, shortened</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>(sys) Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_is_f2f__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(sys) Product is face to face service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_name__c</fullName>
        <description>For roll up summaries</description>
        <label>(sys) Product name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_unit_of_measure__c</fullName>
        <description>Used for roll up summaries</description>
        <label>Quantity unit of measure</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recognised_date__c</fullName>
        <label>Recognised date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recognised_date_shortened__c</fullName>
        <formula>TEXT(YEAR(Recognised_date__c)) &amp; TEXT(Month(Recognised_date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(sys) Recognised date, shortened</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Expense_ID__c</fullName>
        <label>(sys) Related Expense ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_to_date__c</fullName>
        <label>Related to date</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Related_to_training_dates</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sync_matched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(sys) Sync matched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TotalPrice_AUD__c</fullName>
        <formula>TotalPrice/Opportunity.Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_List_Price_AUD__c</fullName>
        <formula>Total_List_Price__c/Opportunity.Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total List Price AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_List_Price__c</fullName>
        <formula>ListPrice  *  Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Touch_datetime__c</fullName>
        <description>Field to allow the record to be touched, so that it then runs it&apos;s &apos;Upon update&apos; processes</description>
        <label>(sys) Touch datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UnitPrice_AUD__c</fullName>
        <formula>UnitPrice/Opportunity.Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Price AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Update_via_automation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to true when updated via code</description>
        <inlineHelpText>Set to true when updated via code</inlineHelpText>
        <label>(sys) Update via automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Xero_code__c</fullName>
        <label>Xero code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>